<resources>
    <string name="app_name">Чат</string>

    <string name="screen_register">Регистрация</string>
    <string name="screen_login">Авторизация</string>
    <string name="screen_friends">Друзья</string>
    <string name="screen_account">Аккаунт</string>
    <string name="screen_user">Пользователь</string>
    <string name="screen_forget_password">Восстановление пароля</string>

    <string name="error_network">Нет сетевого подключения.</string>
    <string name="error_server">Ошибка сервера.</string>
    <string name="error_email_already_exist">Email уже существует.</string>
    <string name="error_password_mismatch">Пароли не совпадают.</string>
    <string name="error_auth">Неправильный email или пароль.</string>
    <string name="error_already_friend">Уже является вашим другом.</string>
    <string name="error_already_requested_friend">Запрос дружбы уже отправлен.</string>
    <string name="error_contact_not_found">Пользователь не найден.</string>
    <string name="error_picking_file">Ошибка при обработке файла, попробуйте еще раз</string>
    <string name="error_wrong_password">Неправильный пароль</string>
    <string name="error_empty_password">Поле пароля не может быть пустым</string>
    <string name="email_not_registered">Email не зарегистрирован</string>
    <string name="error_cant_send_email">Невозможно отправить на этот email</string>


    <string name="email">Email</string>
    <string name="password">Пароль</string>
    <string name="confirm_password">Подтвердите пароль</string>
    <string name="name">Имя</string>
    <string name="register">Регистрация</string>
    <string name="already_have_account">Уже есть аккаунт?</string>
    <string name="dont_have_account">Еще нет аккаунта?</string>
    <string name="forget_password">Забыли пароль?</string>
    <string name="login">Вход</string>
    <string name="chats">Чаты</string>
    <string name="friends">Друзья</string>
    <string name="add_friend">Пригласить друга</string>
    <string name="profile">Аккаунт</string>
    <string name="friend_requests">Входящие приглашения</string>
    <string name="logout">Выйти</string>

    <string name="name_colon">Имя:</string>
    <string name="email_colon">Email:</string>
    <string name="status">Статус</string>
    <string name="status_colon">Статус:</string>
    <string name="current_password">Текущий пароль</string>
    <string name="current_password_colon">Текущий пароль:</string>
    <string name="new_password">Новый пароль</string>
    <string name="new_password_colon">Новый пароль:</string>
    <string name="update_account">Обновить аккаунт</string>
    <string name="send_request">Отправить запрос</string>

    <string name="wants_add_as_friend">хочет добавить вас в список друзей</string>
    <string name="approved_friend_request">принял ваш запрос на добавление в друзья</string>
    <string name="cancelled_friend_request">отменил ваш запрос на добавление в друзья</string>

    <string name="delete_friend">Удалить друга?</string>

    <string name="message_promt_app">Пользователь с указанным email не найден. Хотите отправить ему ссылку на
        приложение?
    </string>
    <string name="message_text_promt_app">Установи приложение для персонального чата:</string>
    <string name="message_subject_promt_app">Привет, пообщаемся?</string>
    <string name="url_google_play">https://play.google.com/store/apps/details?id=</string>

    <string name="friend_request">Запрос в друзья</string>
    <string name="friend_request_approved">Запрос в друзья подтвержден</string>
    <string name="friend_request_cancelled">Запрос в друзья отменен</string>

    <string name="pick">Выберите фото</string>
    <string name="camera">Камера</string>
    <string name="gallery">Галерея</string>

    <string name="success_edit_user">Данные обновлены</string>
    <string name="message">Сообщение</string>
    <string name="send_message">отправляет вам сообщение</string>

    <string name="photo">Фотография</string>

    <string name="remove_message">Удалить сообщение?</string>

    <string name="send_friend_message">Отправить сообщение</string>

    <string name="resendPassword">Получить пароль</string>
    <string name="email_sent">Пароль отправлен на указанный email</string>
</resources>
