<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@id/btnSendMessage"
        android:background="@color/white"
        android:isScrollContainer="false">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/medium_padding">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imgPhoto"
                android:layout_width="@dimen/image_width"
                android:layout_height="@dimen/image_height"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/circle_circle"
                android:src="@drawable/ic_account_circle"
                android:visibility="visible" />


            <TextView
                style="@style/user_headers_text"
                android:text="@string/email_colon" />

            <TextView
                android:id="@+id/tvEmail"
                style="@style/user_text"
                android:hint="@string/email" />


            <TextView
                style="@style/user_headers_text"
                android:text="@string/name_colon" />

            <TextView
                android:id="@+id/tvName"
                style="@style/user_text"
                android:hint="@string/name" />


            <TextView
                android:id="@+id/tvHintStatus"
                style="@style/user_headers_text"
                android:text="@string/status_colon" />

            <TextView
                android:id="@+id/tvStatus"
                style="@style/user_text"
                android:hint="@string/status"
                android:maxLength="200" />
        </LinearLayout>
    </ScrollView>


    <Button
        android:id="@+id/btnSendMessage"
        style="@style/Button.Primary.LoginRegister"
        android:layout_alignParentBottom="true"
        android:layout_margin="@dimen/medium_margin"
        android:text="@string/send_friend_message" />
</RelativeLayout>